cmd/server: add routes and persistence for disclaimers
Issue: https://github.com/moov-io/customers/issues/32
